--- a/nepluginactivity/src/main/res/layout/activity_neplugin.xml
+++ b/nepluginactivity/src/main/res/layout/activity_neplugin.xml
@@ -5,5 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".NepluginActivity">
-
+<android.support.v7.widget.AppCompatTextView
+    android:gravity="center"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:text="HELLOKITTLY"/>
 </android.support.constraint.ConstraintLayout>
